fix: corrects QA issue where spacing on left sided hero was too little

--- a/src/utils/hero/hero.scss
+++ b/src/utils/hero/hero.scss
@@ -89,10 +89,14 @@
     .hero-content {
       display: flex;
       flex-direction: column;
+
+      .hero-tagline {
+        margin-top: 38px;
+      }
     }
 
     .hero-action {
-      margin-top: 90px;
+      margin-top: 119px;
     }
   }
 
